terraform/networking/route_table.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my_igw.id
  }

  tags = {
    Name = "${terraform.workspace}-public-route-table"
  }
}

resource "aws_route" "internet_access" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.my_igw.id
}

# Associate the route table with your subnet(s)
resource "aws_route_table_association" "public_subnet" {
  subnet_id      = aws_subnet.lambda_subnet.id  # Example for a lambda subnet
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_subnet_2" {
  subnet_id      = aws_subnet.rds_subnet.id  # Example for an RDS subnet
  route_table_id = aws_route_table.public.id
}
